@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 17-05-2006 added: Advanced setting <thumbsize> to specify the size XBMC caches thumbs at.
+ - 17-05-2006 fixed: [ 1488180 ] PNG transparency error.
  - 17-05-2006 fixed: [ 1488630 ] Partymode then enqueue causes internal playlist to be added
  - 17-05-2006 fixed: [ 1488829 ] Python ControlTextBox ignores multiple linebreaks
  - 16-05-2006 fixed: Cleaned up the thumb code (for <folder>.tbn)
